# ingredient-slicer

./: .gitignore  LICENSE  README.md  README.rst  pyproject.toml
ingredient_slicer/: __init__.py  _constants.py  _food_catalog.py  _ingredient_constants.py  _ingredient_slicer.py  _ingredient_slicer2.py  _regex_patterns.py  _utils.py
sh/: publish_to_pypi.sh
tests/: test_avg_ranges.py  test_casual_ingredients.py  test_convert_fractions_to_decimals.py  test_convert_volumes_to_grams_with_densities.py  test_convert_volumes_to_milliliters.py  test_duplicate_unit_ranges.py  test_extract_dimensions.py  test_extract_quantities_utils.py  test_find_and_remove.py  test_find_and_remove_hyphen_substrings.py  test_find_and_replace_casual_quantities.py  test_food_units.py  test_fraction_str_to_decimal.py  test_get_animal_protein_unit_gram_weight.py  test_get_food_density.py  test_get_gram_weight.py  test_get_gram_weight2.py  test_get_gram_weight_map.py  test_get_single_item_gram_weight.py  test_implied_quantities.py  test_ingredient_slicer.py  test_ingredient_slicer_animal_protein_units.py  test_ingredient_slicer_dimensions.py  test_ingredient_slicer_edge_case_foods.py  test_ingredient_slicer_fraction_conversions.py  test_ingredient_slicer_gram_weights.py  test_ingredient_slicer_parenthesis.py  test_ingredient_slicer_with_irrelevent_words.py  test_ingredient_slicer_x_separators.py  test_is_approximate_quantity_only_parenthesis.py  test_make_int_or_float_str.py  test_merge_misleading_ranges.py  test_merge_numbers.py  test_number_ranges.py  test_number_ranges_separated_by_words.py  (+24 more)
(+15 files in other folders)
