[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "setuptools-scm"]

[project]
name = "ingredient_slicer"
authors = [
  {name = "Angus Watters", email = "anguswatters@gmail.com"},
]
version = "0.0.85"
description = "Parses unstructured recipe ingredient text into standardized quantities, units, and foods"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: Unix",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Utilities",
]
keywords = ["ingredient", "parser", "recipe", "text processing", "food", "cooking", "grocery", "shopping"]
license = {text = "MIT License"}
dependencies = []
requires-python = ">=3.7"
readme = "README.md"

[project.optional-dependencies]
test = [
  "pytest",
  "pip-tools"
]
dev = ["black"]

[tool.setuptools]
packages = ["ingredient_slicer"]

[tool.setuptools.dynamic]
version = {attr = "ingredient_slicer.__version__"}